--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                     <h2>You Don't Hava Access to Cart</h2>
                 </div>
                 <div class="modal-body d-flex">
-                    <button class="btn btn-primary fw-bold" data-bs-toggle="modal" data-bs-target="#loginModal">LOGIN</button>
-                    <p class="mb-0 py-2 fs-5 fw-bold">&nbsp;OR &nbsp;</p>
-                    <button class="btn btn-success fw-bold" data-bs-toggle="modal" data-bs-target="#signInModal">SIGN IN</button>
-                    <p class="mb-0 py-2 fs-5 fw-bold">&nbsp; TO GET ACCESS TO CART &nbsp;</p>
+                    <p class="mb-0 py-2 fs-5 fw-bold"><span class="text-success">LOGIN</span>&nbsp;OR &nbsp;</p>
+                    <p class="mb-0 py-2 fs-5 fw-bold"><span class="text-danger">SIGN UP</span>&nbsp; TO GET ACCESS TO CART &nbsp;</p>
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-primary fw-bold" data-bs-toggle="modal" data-bs-target="#loginModal">LOGIN</button>
+                    <button class="btn btn-success fw-bold" data-bs-toggle="modal" data-bs-target="#signInModal">SIGN UP</button>
                     <button class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
