--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="header d-flex justify-content-between bg-dark p-1  fs-5 fw-bold">
         <div class="logo px-3 py-2">
             <img src="./media/logo.png" height="40" alt="">
+            <span class="text-secondary">SHOPCHAN</span>
         </div>
         <div class="header-items d-flex justify-content-between w-25 p-2 ">
             <button class="btn btn-dark fs-5 fw-bold"><a href="./index.html">HOME</a></button>
