--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="./media/logo.png" height="40" alt="">
             <span class="text-secondary">SHOPCHAN</span>
         </div>
-        <div class="header-items d-flex justify-content-between w-25 p-2 ">
+        <div class="header-items d-flex justify-content-between p-2 ">
             <button class="btn btn-dark fs-5 fw-bold"><a href="./index.html">HOME</a></button>
             <button class="btn btn-dark fs-5 fw-bold" data-bs-toggle="modal" data-bs-target="#loginModal">LOGIN</button>
             <button class="btn btn-dark fs-5 fw-bold" data-bs-toggle="modal"
