--- a/loginSuccess.html
+++ b/loginSuccess.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="toast-container"></div>
-    <div class="login-header bg-white d-flex justify-content-between p-2 px-4 mt-1"></div>
+    <div class="login-header bg-white d-flex justify-content-between mt-1"></div>
     <div class="item-container"></div>
     <div class="modal fade" id="displayCartModal">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
