--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2>You Don't Hava Access to Cart</h2>
+                    <h2>You Don't Have Access to Cart</h2>
                 </div>
                 <div class="modal-body d-flex">
                     <p class="mb-0 py-2 fs-5 fw-bold"><span class="text-success">LOGIN</span>&nbsp;OR &nbsp;</p>
