--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-    <link rel="icon" href="./media/logo.png" type="image/png">
+    <link rel="icon" href="https://www.vhv.rs/dpng/f/416-4163874_ecommerce-png.png" type="image/png">
 </head>
 <body>
     <div class="toast-container"></div>
