--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h2><span class="bi bi-person"></span>USER LOGIN</h2>
-                    <button class="btn btn-close" data-bs-dismiss="modal"></button>
+                    <button class="btn btn-close" data-bs-dismiss="modal" onclick="clearLogData()"></button>
                 </div>
                 <div class="modal-body">
                     <dl>
@@ -65,7 +65,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h2><span class="bi bi-person"></span>User SignIn</h2>
-                    <button class="btn btn-close" data-bs-dismiss="modal"></button>
+                    <button class="btn btn-close" data-bs-dismiss="modal" onclick="clearLogData()"></button>
                 </div>
                 <div class="modal-body">
                     <dt><label for="signuser">USERNAME</label></dt>
@@ -87,7 +87,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h2>Forgot Password</h2>
-                    <button class="btn btn-close" data-bs-dismiss="modal"></button>
+                    <button class="btn btn-close" data-bs-dismiss="modal" onclick="clearForgotData()"></button>
                 </div>
                 <div class="modal-body">
                     <dt><label for="forgotuser">USERNAME</label></dt>
