--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h2><span class="bi bi-person"></span>User SignIn</h2>
-                    <button class="btn btn-close" data-bs-dismiss="modal" onclick="clearLogData()"></button>
+                    <button class="btn btn-close" data-bs-dismiss="modal" onclick="clearSignData()"></button>
                 </div>
                 <div class="modal-body">
                     <dt><label for="signuser">USERNAME</label></dt>
