--- a/loginSuccess.html
+++ b/loginSuccess.html
@@ -99,6 +99,7 @@
             products.forEach(product => {
                 var { id, images, title, price, brand, category, rating, description } = product;
                 let item = document.createElement("div");
+                item.className = "login-item";
                 item.innerHTML = `
                     <img src="${images[0]}">
                     <p class="fw-bold"><strong>Title :</strong> ${title}</p>
@@ -109,7 +110,32 @@
                 `;
                 itemContainer.appendChild(item);
             })
+            setTimeout(() => {
+                intersectionObserver();
+            }, 0);
         }
+
+        function intersectionObserver(){
+            const items = document.querySelectorAll(".login-item");
+            console.log(items);
+            const handleIntersect = (entries) => {
+                for(entry of entries){
+                    if(entry.isIntersecting){
+                        entry.target.classList.add("reveal");
+                    }
+                    else{
+                        entry.target.classList.remove("reveal");
+                    }
+                }
+            }
+            const observer = new IntersectionObserver(handleIntersect , {
+                threshold : 0.1
+            });
+            for(item of items){
+                observer.observe(item);
+            }
+        }
+
         function logoutUser() {
             let confirm = window.confirm("Do you really want to logout ?");
             if (confirm) {
@@ -173,9 +199,7 @@
         }
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
