--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="https://www.vhv.rs/dpng/f/416-4163874_ecommerce-png.png" type="image/png">
 </head>
 <body>
+    <div class="loader" id="loader"></div>
     <div class="toast-container"></div>
     <div class="header d-flex justify-content-between bg-dark p-1  fs-5 fw-bold">
         <div class="logo px-3 py-2">
