--- a/loginSuccess.html
+++ b/loginSuccess.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div class="loader" id="loader"></div>
     <div class="toast-container"></div>
     <div class="login-header bg-white d-flex justify-content-between mt-1"></div>
     <div class="item-container"></div>
@@ -33,6 +34,7 @@
         </div>
     </div>
     <script>
+        let loader = document.getElementById("loader");
         function showToast(message, type = "success") {
             const container = document.querySelector('.toast-container');
             const toast = document.createElement('div');
@@ -82,6 +84,7 @@
                 <button class="btn btn-success" onclick=logoutUser()>LOGOUT</button>
                 `;
             loginHeader.appendChild(item);
+            loader.remove()
         }
         displayHeader();
 
